# MatrixOS

./: b.cmd  c.cmd  makefile  source.mk  u.bat
Applications/Python/PikaPython/pikascript-api/: _MatrixOS_HID_RawHID.h  _MatrixOS_KeyEvent.h  _MatrixOS_UIComponent.h
Applications/SameGame/: CMakeLists.txt  SameGame.cpp  SameGame.h
Devices/MatrixESP32/: ApplicationList.txt
applications/Matrix/FactoryMenu/: FactoryMenu.cpp  KeyPadSettings.cpp  TouchBarTester.cpp
devices/MatrixBlock5/: DeviceSetting.h  Family.cpp  Family.h  FreeRTOSConfig.h  family.mk  stm32f1xx_hal_msp.cpp  stm32f1xx_hal_timebase_tim.c
devices/MatrixBlock5/Drivers/: Keypad.cpp  LED.cpp  NVS.cpp  NVS.h  Touchbar.cpp  USB.cpp
devices/MatrixBlock5/Varients/MatrixFounderEdition/: Config.h  FounderEdition.cpp  stm32f1xx_hal_conf.h
devices/MatrixBlock6_ESP32S3/Drivers/: BLEMIDI.cpp
devices/MatrixBlock6_ESP32S3/Varients/MatrixPro/: Config.h
os/framework/: SavedVariable.h
os/system/: MIDI.cpp  Parameters.h  System.cpp  System.h
os/system/USB/: USB.cpp
os/ui/interface/: ColorPicker.cpp
